<resources>
    <string name="app_name">NotesAppsRetrofit</string>
    <string name="todo">To Do</string>
    <string name="enter_a_note">Enter a note ....</string>
    <string name="save">Simpan</string>
    <string name="progress_dialog">Please Wait</string>
    <string name="text_dates">19 Februari 2019</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="update">update</string>
    <string name="title_update">Update Title</string>
    <string name="wajib_di_isi">Wajib di isi</string>
</resources>
