<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_menu_update"
        android:icon="@drawable/ic_save"
        android:title="@string/update"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="always" />

</menu>