<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/dimen_medium"
    android:layout_marginLeft="@dimen/dimen_medium"
    android:layout_marginRight="@dimen/dimen_medium"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/card_view">

    <LinearLayout
        android:layout_margin="@dimen/dimen_big"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/list_title"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_notes"
            android:text="@string/enter_a_note"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_dates"
            android:text="@string/text_dates"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.cardview.widget.CardView>